--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,20 @@
 server.servlet.encoding.force=true
 spring.h2.console.enabled=true
-spring.jpa.defer-datasource-initialization=trye
+spring.jpa.defer-datasource-initialization=true
+
+# JPA logging setting
+# debug level? query print
+logging.level.org.hibernate.SQL=DEBUG
+
+# query line change
+spring.jpa.properties.hibernate.format_sql=true
+
+# show parameter value
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# DB URL setting
+# no create unique URL
+spring.datasource.generate-unique-name=false
+
+# set fixed URL
+spring.datasource.url=jdbc:h2:mem:testdb
